Update for Acrobat x64

--- a/Uev/templates/AdobeAcrobatReaderDC.v2.xml
+++ b/Uev/templates/AdobeAcrobatReaderDC.v2.xml
@@ -11,6 +11,9 @@
     <Process>
       <Filename>AcroRd32.exe</Filename>
     </Process>
+    <Process>
+      <Filename>Acrobat.exe</Filename>
+    </Process>
   </Processes>
   <Settings>
     <Registry>
