--- a/Uev/templates/MicrosoftSsms.xml
+++ b/Uev/templates/MicrosoftSsms.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<SettingsLocationTemplate xmlns="http://schemas.microsoft.com/UserExperienceVirtualization/2013A/SettingsLocationTemplate">
+<SettingsLocationTemplate xmlns="https://schemas.microsoft.com/UserExperienceVirtualization/2013A/SettingsLocationTemplate">
   <Name>Microsoft SQL Server Management Studio</Name>
   <ID>Microsoft-SQLServerSsms</ID>
   <Version>1</Version>
@@ -10,14 +10,6 @@
   <Processes>
     <Process>
       <Filename>Ssms.exe</Filename>
-      <ProductVersion>
-        <Major Minimum="15" Maximum="*" />
-        <Minor Minimum="0" Maximum="*" />
-      </ProductVersion>
-      <FileVersion>
-        <Major Minimum="2019" Maximum="*" />
-        <Minor Minimum="150" Maximum="*" />
-      </FileVersion>
     </Process>
   </Processes>
   <Settings>
