--- a/Uev/templates/AdobeAcrobatDC.xml
+++ b/Uev/templates/AdobeAcrobatDC.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<SettingsLocationTemplate xmlns="https://schemas.microsoft.com/UserExperienceVirtualization/2013A/SettingsLocationTemplate">
+<SettingsLocationTemplate xmlns="http://schemas.microsoft.com/UserExperienceVirtualization/2013A/SettingsLocationTemplate">
   <Name>Adobe Acrobat DC </Name>
   <ID>AdobeAcrobatDC-Acrobatv22</ID>
   <Version>1</Version>
