--- a/Uev/templates/GoogleChrome.xml
+++ b/Uev/templates/GoogleChrome.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<SettingsLocationTemplate xmlns="https://schemas.microsoft.com/UserExperienceVirtualization/2013A/SettingsLocationTemplate">
+<SettingsLocationTemplate xmlns="http://schemas.microsoft.com/UserExperienceVirtualization/2013A/SettingsLocationTemplate">
   <Name>Google Chrome</Name>
   <ID>GoogleChrome</ID>
   <Version>2</Version>
