--- a/Uev/templates/HandBrake.xml
+++ b/Uev/templates/HandBrake.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- This file came from https://github.com/DavidDjerf/UEV-Templates -->
-<SettingsLocationTemplate xmlns="https://schemas.microsoft.com/UserExperienceVirtualization/2013A/SettingsLocationTemplate">
-	<Name>Audacity</Name>
-	<ID>Audacity-Audacity</ID>
+<SettingsLocationTemplate xmlns="http://schemas.microsoft.com/UserExperienceVirtualization/2013A/SettingsLocationTemplate">
+	<Name>HandBrake</Name>
+	<ID>HandBrake-HandBrake</ID>
 	<Version>1</Version>
 	<Author>
 		<Name>David Djerf</Name>
 	</Author>
 	<Processes>
 		<Process>
-			<Filename>audacity.exe</Filename>
+			<Filename>Handbrake.exe</Filename>
 		</Process>
 	</Processes>
 	<Settings>
@@ -17,7 +17,7 @@
 			<Root>
 				<EnvironmentVariable>APPDATA</EnvironmentVariable>
 			</Root>
-			<Path Recursive="true">Audacity</Path>
+			<Path Recursive="true">HandBrake</Path>
 		</File>
 	</Settings>
 </SettingsLocationTemplate>
