--- a/Uev/templates/PaintDotNet.xml
+++ b/Uev/templates/PaintDotNet.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<SettingsLocationTemplate xmlns="https://schemas.microsoft.com/UserExperienceVirtualization/2013A/SettingsLocationTemplate">
+<SettingsLocationTemplate xmlns="http://schemas.microsoft.com/UserExperienceVirtualization/2013A/SettingsLocationTemplate">
   <Name>paint.net</Name>
   <ID>PaintDotNet</ID>
   <Version>1</Version>
@@ -10,6 +10,14 @@
   <Processes>
     <Process>
       <Filename>PaintDotNet.exe</Filename>
+      <ProductVersion>
+        <Major Minimum="4" Maximum="99" />
+        <Minor Minimum="0" Maximum="99" />
+      </ProductVersion>
+      <FileVersion>
+        <Major Minimum="4" Maximum="99" />
+        <Minor Minimum="0" Maximum="99" />
+      </FileVersion>
     </Process>
   </Processes>
   <Settings>
